--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,10 @@ sky:
     database: sky_take_out
     username: root
     password: 1234
+
+  alioss:
+    endpoint: oss-cn-hangzhou.aliyuncs.com
+    access-key-id: LTAI5tPaKDZ3JfPxEKJfrHRE
+    access-key-secret: t7XAwIqdhqKVt7XuQ94fbVGTzINbnT
+    bucket-name: sky-p1sto
+
