--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -13,3 +13,8 @@ sky:
     access-key-secret: t7XAwIqdhqKVt7XuQ94fbVGTzINbnT
     bucket-name: sky-p1sto
 
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 0
